# enum-ts

./: .gitignore  Cargo.toml  README.md  RELEASE_NOTES.md  design.ts  enum.ts  test.sh  untag.js  update_versions.js
.github/jobs/: release.yml
.github/workflows/: release.yml
src/: codegen.rs  main.rs  parser.rs  string_utils.rs  write.rs
src/codegen/: apply_match.rs  creators.rs  type_aliases.rs  type_guards.rs
tests/: binary-tree.ts  nested.ts  result.ts  stoplight.ts
vscode-extension/: README.md  package.json
vscode-extension/src/: extension.ts
vscode-extension/tests/: enum.ts  no-enum-file.ts  result.ts  stoplight.ts
vscode-formatter/: package.json
vscode-formatter/src/: extension.ts
vscode-formatter/tests/: result.ts  stoplight.ts
